<resources>
    <string name="app_name">GaStation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gas">Gaz</string>
    <string name="diesel">Dizel</string>
    <string name="gasoline">Benzin</string>
    <string name="pump">Pompa</string>
    <string name="todo">TODO</string>

    <string-array name="city_array">
        <item>İSTANBUL</item>
        <item>ANKARA</item>
        <item>İZMİR</item>
        <item>BURSA</item>
        <item>ADANA</item>
        <item>ADIYAMAN</item>
        <item>AFYONKARAHİSAR</item>
        <item>AGRI</item>
        <item>AMASYA</item>
        <item>ANTALYA</item>
        <item>ARTVİN</item>
        <item>AYDIN</item>
        <item>BALIKESİR</item>
        <item>BİLECİK</item>
        <item>BİNGOL</item>
        <item>BİTLİS</item>
        <item>BOLU</item>
        <item>BURDUR</item>
        <item>BURSA</item>
        <item>ÇANAKKALE</item>
        <item>ÇANKIRI</item>
        <item>ÇORUM</item>
        <item>DENİZLİ</item>
        <item>DİYARBAKIR</item>
        <item>EDİRNE</item>
        <item>ELAZIG</item>
        <item>ERZİNCAN</item>
        <item>ERZURUM</item>
        <item>ESKİSEHİR</item>
        <item>GAZİANTEP</item>
        <item>GİRESUN</item>
        <item>GUMUSHANE</item>
        <item>HAKKARİ</item>
        <item>HATAY</item>
        <item>ISPARTA</item>
        <item>MERSİN</item>
        <item>KARS</item>
        <item>KASTAMONU</item>
        <item>KAYSERİ</item>
        <item>KIRKLARELİ</item>
        <item>KIRSEHİR</item>
        <item>KOCAELİ</item>
        <item>KONYA</item>
        <item>KUTAHYA</item>
        <item>MALATYA</item>
        <item>MANİSA</item>
        <item>KAHRAMANMARAS</item>
        <item>MARDİN</item>
        <item>MUGLA</item>
        <item>MUS</item>
        <item>NEVSEHİR</item>
        <item>NİGDE</item>
        <item>ORDU</item>
        <item>RİZE</item>
        <item>SAMSUN</item>
        <item>SİİRT</item>
        <item>SİNOP</item>
        <item>SİVAS</item>
        <item>TEKİRDAG</item>
        <item>TOKAT</item>
        <item>TRABZON</item>
        <item>TUNCELİ</item>
        <item>SANLIURFA</item>
        <item>USAK</item>
        <item>VAN</item>
        <item>YOZGAT</item>
        <item>ZONGULDAK</item>
        <item>AKSARAY</item>
        <item>BAYBURT</item>
        <item>KARAMAN</item>
        <item>KIRIKKALE</item>
        <item>BATMAN</item>
        <item>SIRNAK</item>
        <item>BARTIN</item>
        <item>ARDAHAN</item>
        <item>IGDIR</item>
        <item>YALOVA</item>
        <item>KARABUK</item>
        <item>KİLİS</item>
        <item>OSMANİYE</item>
        <item>DUZCE</item>
    </string-array>
</resources>