<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ChoosenFragment"
    android:background="@color/primaryLightColor">

    <TextView
        android:id="@+id/textViewPump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/pump"
        android:textColor="@color/primaryTextColor"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="204dp"
        android:layout_height="120dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPump"
        app:srcCompat="@drawable/pump"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo">

    </ImageView>

    <LinearLayout
        android:layout_width="301dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gasoline"
            android:layout_marginStart="10dp"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:text="@string/diesel"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gas"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            android:layout_gravity="center">
        </TextView>




    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <ImageButton
            android:id="@+id/gasolineButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/app_name"
            android:src="@drawable/gasoline"
            android:textColor="@color/primaryTextColor"
            tools:ignore="DuplicateSpeakableTextCheck">

        </ImageButton>


        <ImageButton
            android:id="@+id/dieselButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/app_name"
            android:src="@drawable/diesel"
            android:textColor="@color/primaryTextColor">

        </ImageButton>

        <ImageButton
            android:id="@+id/gasButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/app_name"
            android:src="@drawable/gas"
            android:textColor="@color/primaryTextColor"
            tools:ignore="ImageContrastCheck">

        </ImageButton>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>